--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.13",
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
