--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/styled-engine-sc": "^6.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^0.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13",
-    "axios": "^0.28.0",
-    "react-router-dom": "^6.2.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.2.2",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
