--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/styled-engine-sc": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^0.28.0",
+    "quill-better-table": "^1.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.2.2",
     "redux": "^5.0.1",
